--- a/xpi/content/css/bf_urlbarfix.css
+++ b/xpi/content/css/bf_urlbarfix.css
@@ -1,10 +1,2 @@
 @import url(chrome://ctr_os_special/skin/back-forwardextra.css);
-@namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
-
-@-moz-document url(chrome://browser/content/browser.xul) {
-    #urlbar{
-	  border-top-left-radius: 2.5px !important;
-	  border-bottom-left-radius: 2.5px !important;
-    }
-	
-}
+@import url(chrome://ctr_os_special/skin/bf_urlbarfixextra.css);
