--- a/xpi/content/css/tabs_squared-osx.css
+++ b/xpi/content/css/tabs_squared-osx.css
@@ -128,30 +128,17 @@
 	  border-top-left-radius: 3px !important;
 	}
 	
-	.tabs-newtab-button:not(:-moz-lwtheme){
+	.tabs-newtab-button:not(:-moz-lwtheme),
+	.tabs-newtab-button:-moz-lwtheme{
 	  border-width: 1px 3px 1px !important;
 	  border-image: url(chrome://classic_theme_restorer/content/images/tab.png) 0 3 1 fill repeat stretch !important;
 	  border-style: solid !important;
 	}
-	
-	.tabs-newtab-button:-moz-lwtheme{
-	  border-width: 1px 3px 1px !important;
-	  border-image: url(chrome://classic_theme_restorer/content/images/taba.png) 0 3 1 fill repeat stretch !important;
-	  border-style: solid !important;
-	}
 
-	.tabbrowser-tab[selected=true] > .tab-stack > .tab-content {
-      border-image: url("chrome://classic_theme_restorer/content/images/taba.png") 1 3 0 fill repeat stretch !important;
-      border-style: solid !important;
-    }
-	
-	.tabbrowser-tab:not([selected=true]):not(:-moz-lwtheme) > .tab-stack > .tab-content {
-      border-image: url("chrome://classic_theme_restorer/content/images/tab.png") 1 3 0 fill repeat stretch !important;
-      border-style: solid !important;
-    }
-	
+	.tabbrowser-tab[selected=true] > .tab-stack > .tab-content,
+	.tabbrowser-tab:not([selected=true]):not(:-moz-lwtheme) > .tab-stack > .tab-content,
 	.tabbrowser-tab:not([selected=true]):-moz-lwtheme > .tab-stack > .tab-content {
-      border-image: url("chrome://classic_theme_restorer/content/images/taba.png") 1 3 0 fill repeat stretch !important;
+      border-image: url("chrome://classic_theme_restorer/content/images/tab.png") 1 3 0 fill repeat stretch !important;
       border-style: solid !important;
     }
 
@@ -246,6 +233,7 @@
 	#TabsToolbar::after {
 	  border-bottom: 0px !important;
 	}
+
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
