--- a/xpi/content/css/tabs_squared-r-osx2.css
+++ b/xpi/content/css/tabs_squared-r-osx2.css
@@ -219,11 +219,6 @@
 	  margin-right: -8px !important;
 	}
 
-	#TabsToolbar:not(:-moz-lwtheme){
-		background: linear-gradient(to bottom,#5e5e5e 1px,#898989,#939393,#989898,#a1a1a1 1px) !important;
-		border-bottom: 1px solid #6f6f6f !important;
-	}
-	
 	#TabsToolbar #ctr_appbutton{
 	  border-radius: 0 !important;
 	  border-bottom-left-radius: 3px !important;
@@ -245,6 +240,12 @@
 	#TabsToolbar{
 	  background-image: none !important;
 	}
+	
+	#navigator-toolbox  #TabsToolbar:not(:-moz-lwtheme){
+	  background: linear-gradient(to bottom,#5e5e5e 1px,#898989,#939393,#989898,#a1a1a1 1px) !important;
+	  border-bottom: 1px solid #6f6f6f !important;
+	}
+
 	#TabsToolbar::after {
 	  border-bottom: 0px !important;
 	}
