--- a/xpi/ctr_os_special/linux/back-forwardextra.css
+++ b/xpi/ctr_os_special/linux/back-forwardextra.css
@@ -1,31 +1,1 @@
-@namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
-
-@-moz-document url(chrome://browser/content/browser.xul){
-
-	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar > #notification-popup-box[hidden] + *:-moz-locale-dir(ltr),
-	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar > #notification-popup-box[hidden] + *:-moz-locale-dir(rtl),
-	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper,
-	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > *{
-	  transition: none !important;
-	}
-	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper:-moz-locale-dir(ltr){
-      padding-left: 44px !important;
-	}
-	
-	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper:-moz-locale-dir(rtl){
-      padding-right: 44px !important;
-	}
-	
-	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar:-moz-locale-dir(ltr) {
-	  transition: none !important;
-	  transition-property:  none !important;
-	  transition-delay: 0s !important;
-	}
-
-	#wrapper-urlbar-container, #urlbar-container,#urlbar-wrapper,#urlbar{
-	  transition: none !important;
-	  transition-property:  none !important;
-	  transition-delay: 0s !important;
-	}
-
-}
+@import url(back-forwardextra2.css);
