--- a/xpi/ctr_os_special/mac/smallnavbutextra.css
+++ b/xpi/ctr_os_special/mac/smallnavbutextra.css
@@ -1,20 +1,26 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 @-moz-document url(chrome://browser/content/browser.xul) {
 
-	#nav-bar #back-button:not(:-moz-lwtheme){
+	#nav-bar #back-button{
 	  background:none !important;
 	  padding: 0 !important;
 	  height: 0 !important;
 	}
-	#nav-bar #forward-button:not(:-moz-lwtheme){
+	#nav-bar #forward-button{
 	  background:none !important;
 	  padding: 0 !important;
 	  height: 0 !important;
 	  border: 0 !important;
 	}
 
-	#navigator-toolbox #nav-bar #forward-button {
-	  margin-right: 2px !important;
+    #navigator-toolbox #nav-bar #forward-button:-moz-locale-dir(ltr){
+      margin-right: 2px !important;
+	  margin-left: -4px !important;
+	}
+	
+    #navigator-toolbox #nav-bar #forward-button:-moz-locale-dir(rtl){
+      margin-left: 2px !important;
+	  margin-right: -4px !important;
 	}
 	
 	#nav-bar .toolbarbutton-1 {
@@ -44,8 +50,7 @@
 	  box-shadow: none !important;
 	  transition-property: none !important;
       transition-duration: 0ms !important;
-      margin-left: -4px !important;
-	}   
+	}
 
 	#nav-bar #back-button:not(:hover) > .toolbarbutton-icon,
 	#nav-bar #forward-button:not(:hover) > .toolbarbutton-icon,
@@ -57,19 +62,50 @@
 	  background: none !important;
 	}
 
-    #urlbar:-moz-locale-dir(ltr){
-      border-left:1px solid #b4c1cf !important;
-    }
-    #urlbar[focused="true"]:-moz-locale-dir(ltr){
-      border-left:1px solid #72c0fe !important;
-    }
-    #urlbar:-moz-locale-dir(rtl){
-      border-right:1px solid #b4c1cf !important;
-    }
-    #urlbar[focused="true"]:-moz-locale-dir(rtl){
-      border-right:1px solid #72c0fe !important;
-    }
+	#navigator-toolbox #nav-bar .toolbarbutton-1:hover > .toolbarbutton-menubutton-dropmarker > image,
+	#navigator-toolbox #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-button:not(.tabs-newtab-button):not(.tab-close-button):not([disabled]):hover > .toolbarbutton-icon,
+	#navigator-toolbox #nav-bar toolbarbutton[type="menu"]:not(.tabs-newtab-button):not(.tab-close-button):not([disabled]):hover > .toolbarbutton-icon,
+	#navigator-toolbox #nav-bar .toolbarbutton-1:not(.tabs-newtab-button):not(.tab-close-button):not([disabled]):hover > .toolbarbutton-icon{
+      background-image: linear-gradient(hsla(0,0%,100%,.6), hsla(0,0%,100%,.1)) !important;
+      border-color: hsla(210,54%,20%,.15) hsla(210,54%,20%,.2) hsla(210,54%,20%,.25) !important;
+      box-shadow: 0 1px hsla(0,0%,100%,.3) inset,
+                  0 1px hsla(210,54%,20%,.03),
+                  0 0 2px hsla(210,54%,20%,.1) !important;
+	}
+
+	#navigator-toolbox #nav-bar #urlbar-container:-moz-locale-dir(ltr) {
+	  margin-left: 0px !important;
+	}
+	#navigator-toolbox #nav-bar #urlbar-container:-moz-locale-dir(rtl) {
+	  margin-right: 0px !important;
+	}
+
+	#notification-popup-box[hidden] + *:-moz-locale-dir(ltr),
+	#notification-popup-box + *:-moz-locale-dir(ltr) {
+	  padding-left: 4px !important;
+	  transition: none !important;
+	}
+
+	#notification-popup-box[hidden] + *:-moz-locale-dir(rtl),
+	#notification-popup-box + *:-moz-locale-dir(rtl) {
+	  padding-right: 4px !important;
+	  transition: none !important;
+	}
 	
+	#urlbar-container[forwarddisabled]:hover:not([switchingtabs]) > #urlbar-wrapper > #urlbar {
+	  transition-delay: 0s !important;
+	}
+
+	#urlbar-container > #urlbar-wrapper > #urlbar:-moz-locale-dir(ltr),
+	#urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar:-moz-locale-dir(ltr) {
+	  margin-left: 4px !important;
+	}
+	
+	#urlbar-container > #urlbar-wrapper > #urlbar:-moz-locale-dir(rtl),
+	#urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar:-moz-locale-dir(rtl) {
+	  margin-right: 4px !important;
+	}
+
 	#ctr_puib_separator{
 	  margin-top: 2px !important;
 	  margin-bottom: 2px !important;
@@ -82,11 +118,17 @@
 	  margin: 0.5px 0 0 0 !important;
 	}
 	
-	#navigator-toolbox #nav-bar #bookmarks-menu-button .toolbarbutton-menubutton-dropmarker .dropmarker-icon{
+	#navigator-toolbox:-moz-locale-dir(ltr) #nav-bar #bookmarks-menu-button .toolbarbutton-menubutton-dropmarker .dropmarker-icon{
 	  margin-left:1px !important;
 	}
-	#navigator-toolbox #nav-bar #bookmarks-menu-button .toolbarbutton-menubutton-dropmarker{
+	#navigator-toolbox:-moz-locale-dir(ltr) #nav-bar #bookmarks-menu-button .toolbarbutton-menubutton-dropmarker{
 	  margin-left:-5px !important;
+	}
+	#navigator-toolbox:-moz-locale-dir(rtl) #nav-bar #bookmarks-menu-button .toolbarbutton-menubutton-dropmarker .dropmarker-icon{
+	  margin-right:1px !important;
+	}
+	#navigator-toolbox:-moz-locale-dir(rtl) #nav-bar #bookmarks-menu-button .toolbarbutton-menubutton-dropmarker{
+	  margin-right:-5px !important;
 	}
 	
 	/* star button in urlbar support */
