--- a/xpi/content/css/tabsontop_off.css
+++ b/xpi/content/css/tabsontop_off.css
@@ -41,15 +41,11 @@
 	#TabsToolbar .tabbrowser-tabs:not([multibar]) .tabbrowser-tab {
 	  margin-bottom: -2px !important;
 	}
-	
-	#TabsToolbar[multibar]  {
-	  margin-bottom: -2px !important;
-	}
-	
+
 	#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar #ctr_appbutton{
-		margin-top: 2px !important; 
-		margin-bottom: 0px !important;
-		border-radius: 2.5px 2.5px 0 0 !important;
+	  margin-top: 2px !important; 
+	  margin-bottom: 0px !important;
+	  border-radius: 2.5px 2.5px 0 0 !important;
 	}
 	
 	#main-window[chromehidden~="menubar"][sizemode="maximized"] #toolbar-menubar ~ #TabsToolbar:-moz-locale-dir(ltr),
@@ -72,6 +68,14 @@
 	  background-image: none !important;
 	  box-shadow: none !important;
 	  border: none !important;
-	}	
+	}
+
+	/* TMP multibar support */
+	#TabsToolbar[multibar]:not(:-moz-lwtheme)  {
+	  margin-bottom: -3px !important;
+	}
+	#TabsToolbar[multibar]:-moz-lwtheme  {
+	  margin-bottom: -2px !important;
+	}
 
 }
