--- a/xpi/ctr_os_special/winaero/overlayextra.css
+++ b/xpi/ctr_os_special/winaero/overlayextra.css
@@ -41,12 +41,6 @@
 	#ctr_reload-button:-moz-lwtheme-brighttext > .toolbarbutton-icon {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/reload-inv.png");
 	}
-
-	#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar #ctr_appbutton{
-	  margin-top:-16px;
-	  margin-bottom:22px;
-	  border-radius: 0 0 4px 4px;
-	}
 	
 	#nav-bar :-moz-any(#ctr_appbutton,#ctr_bookmarks-button,#ctr_history-button,#ctr_back-button,#ctr_forward-button,#ctr_stop-button,#ctr_reload-button) > .toolbarbutton-icon{
 	  padding: 2px 6px 2px 6px !important;
@@ -144,22 +138,34 @@
 	
 	/* ctr addonbar */
 	#ctr_addon-bar toolbarbutton {
-	  -moz-appearance: none !important;
-	  margin: 0px 3px !important;
-	  padding:0px !important;
+	  -moz-appearance: none;
+	  margin: 0px 3px;
+	  padding:0px;
 	}
 	#ctr_addon-bar toolbarbutton .toolbarbutton-icon {
 	  max-width: 18px;
 	  max-height: 18px;
 	}
 	#ctr_addon-bar .toolbarbutton-menubutton-dropmarker:-moz-locale-dir(ltr) {
-	  padding: 0px !important;
-	  margin-left: -3px !important;
+	  padding: 0px;
+	  margin-left: -3px;
 	}
 	#ctr_addon-bar .toolbarbutton-menubutton-dropmarker:-moz-locale-dir(rtl) {
-	  padding: 0px !important;
-	  margin-left: -3px !important;
+	  padding: 0px;
+	  margin-right: -3px;
 	}
+	/*#ctr_addon-bar toolbarbutton {
+	  padding-left: 0px;
+      padding-right: 0px;
+	}
+	#ctr_addon-bar toolbarbutton .toolbarbutton-icon {
+	  max-width: 18px;
+	  max-height: 18px;
+	}
+	#ctr_addon-bar .toolbarbutton-menubutton-dropmarker {
+	  padding-left: 0px;
+      padding-right: 0px;
+	}*/
 
 }
 
