--- a/xpi/ctr_os_special/winxp/starinurlextra.css
+++ b/xpi/ctr_os_special/winxp/starinurlextra.css
@@ -2,22 +2,22 @@
 
 @-moz-document url(chrome://browser/content/browser.xul){
 
-	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"] .toolbarbutton-icon {
-	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton1.png") !important;
+	#urlbar-container #bookmarks-menu-button .toolbarbutton-icon {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton1.png");
 	}
-	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"]:hover .toolbarbutton-icon {
-	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton1.png") !important;
+	#urlbar-container #bookmarks-menu-button:hover .toolbarbutton-icon {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton1.png");
 	}
-	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"]:hover:active .toolbarbutton-icon {
-	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton1.png") !important;
+	#urlbar-container #bookmarks-menu-button:hover:active .toolbarbutton-icon {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton1.png");
 	}
-	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"][starred] .toolbarbutton-icon {
-	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton2.png") !important;
+	#urlbar-container #bookmarks-menu-button[starred] .toolbarbutton-icon {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton2.png");
 	}
-	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"][starred]:hover .toolbarbutton-icon {
-	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton2.png") !important;
+	#urlbar-container #bookmarks-menu-button[starred]:hover .toolbarbutton-icon {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton2.png");
 	}
-	toolbar[currentset*="urlbar-container,bookmarks-menu-button"]:not([customizing])  #bookmarks-menu-button[cui-areatype="toolbar"][starred]:hover:active .toolbarbutton-icon {
-	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton2.png") !important;
+	#urlbar-container #bookmarks-menu-button[starred]:hover:active .toolbarbutton-icon {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/starbutton2.png");
 	}
 }
